# opa-python

./: .dockerignore  .gitignore  .readthedocs.yml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: requirements.txt
docs/source/: conf.py  index.rst  introduction.rst  modules.rst  opa.rst  reference.rst
opa/: __init__.py  client.py  exceptions.py
tests/: conftest.py  system.rego  test_authorization.py  test_config.py  test_data.py  test_data_api.py  test_decisions.py  test_health.py  test_initialization.py  test_integration.py  test_policies.py  test_query.py
